--- a/main.html
+++ b/main.html
@@ -8,6 +8,53 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<fieldset>
+        <h2>Signup Form Car</h2>
+    <form action="" method="post">
+        <label for="name">Name:</label>
+        <br>
+        <input type="Text" id="name" placeholder="Name" required>
+        <br><br>
+        <label for="email">Email:</label>
+        <br>
+        <input type="Email" id="email" placeholder="Email" required>
+        <br><br>
+        <label for="gender_m">Male</label>
+        <input type="Radio" id="gender_m" name="gender" required>
+        <label for="gender_f">Female</label>
+        <input type="Radio" id="gender_f" name="gender" required>
+        <br> <br>
+        <label for="cars">Car Brands :</label>
+        <br>
+        <select name="" id="cars" placeholder="--Please Select an Option--" required>
+            <option value="">Mustang GT</option>
+            <option value="">Lamborgini</option>
+            <option value="">Mercidise</option>
+        </select>
+        <br><br>
+        <label for="age">Age:</label>
+        <br>
+        <input type="Number" id="age" placeholder="Age" required>
+        <br><br>
+        <label for="">DOB:</label>
+        <br>
+        <input type="Date" id="dob" required>
+        <br><br>
+        <label for="tel">Phone Number:</label>
+        <br>
+        <input type="Tel" id="tel" placeholder="xxx-xxx-xxxx">
+        <br><br>
+        <label for="password">Password:</label>
+        <br>
+        <input type="Password" id="password" placeholder="Password" required>
+        <br><br>
+        <input type="Checkbox" id="tos" required> 
+        <label for="tos">I agree to the TOS</label>
+        <br> <br>
+        <button>Submit</button>
+    </form>
+</fieldset>
     <script type="text/javascript" src="./script.js">
 </script>
 
