--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
         <br>
         <input type="Number" id="age" placeholder="Age" required>
         <br><br>
-        <label for="">DOB:</label>
+        <label for="dob">DOB:</label>
         <br>
         <input type="Date" id="dob" required>
         <br><br>
@@ -52,7 +52,7 @@
         <input type="Checkbox" id="tos" required> 
         <label for="tos">I agree to the TOS</label>
         <br> <br>
-        <button>Submit</button>
+        <button type="submit">Submit
     </form>
 </fieldset>
     <script type="text/javascript" src="./script.js">
